--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           width="100px" />
       </h1>
       <p>
-        I am a junior full stack developer with experience in both team-based and independent projects.
+        I am a trainee front-end developer with experience in both team-based and independent projects.
         My dream is to earn a challenging job in order to succeed in an environment of growth and
         excellence. I believe I will obtain a position that provides me job satisfaction, self
         development and helps me to achieve personal as well as organizational goals.
@@ -70,13 +70,13 @@
       <div class="skill">
         <img src="html_finalprojimages/html5.png" />
         <h6>HTML</h6>
-        <p>2 years experience</p>
+        <p>3 years experience</p>
       </div>
 
       <div class="skill">
         <img src="html_finalprojimages/js.jpeg" />
         <h6>JavaScript</h6>
-        <p>3 years experience</p>
+        <p>1 years experience</p>
       </div>
 
       <!-- Add more skills here -->
@@ -87,16 +87,16 @@
         <p>3 years experience</p>
       </div>
 
-      <div class="skill">
+      <!-- <div class="skill">
         <img src="html_finalprojimages/react.png" />
         <h6>React</h6>
-        <p>2 years experience</p>
+        <p>0 years experience</p>
       </div>
       <div class="skill">
         <img src="html_finalprojimages/node.png" />
         <h6>Node.js</h6>
-        <p>2 years experience</p>
-      </div>
+        <p>0 years experience</p>
+      </div> -->
 
 
     </div>
