--- a/index.html
+++ b/index.html
@@ -112,30 +112,45 @@
     <div id="projects-container" class="projects-container">
       <div class="project-card">
         <h3>
-          Phonebook</h3>
+          WebStudio</h3>
         <ul>
-          <li>A desktop phone book application realized with the help of React, Redux and Redux Toolkit. Here you can
-            find registration and login forms as well as contacts page where it is possible to add new contact, delete
-            one and search among already added contacts, using filter form.</li>
+          <a href="https://braharulia.github.io/goit-markup-hw-08/">WebStudio</a>
+          <li>A website of WebStudio company.
+          Responsive design, transform
+          effects, modal windows.
+          Role: developer.
+          Individual project.
+          [HTML5, SCSS, JS]
+</li>
         </ul>
       </div>
       <hr>
       <div class="project-card">
         <h3>
-          Bookshelf</h3>
+          IceCream</h3>
         <ul>
-          <li>Team-project. Role: Developer.
-            A desktop application which can offer a list of books of various categories to choose the best resource for
-            the purchase with responsive layout, modal window, sliders classic pagination and infinity scroll</li>
+          <li><a href="https://braharulia.github.io/team-proj-icecream/">IceCream</a>
+          A website for ice cream product
+          companies. Adaptive design,
+          animations, modal windows, and
+          burger menu for ordering.
+          Role: Developer of Buy now modal
+          & Products section with modal.
+          Team project
+          [HTML5, SCSS, JS, Parcel-Project-Template]
+</li>
         </ul>
       </div>
       <hr>
       <div class="project-card">
         <h3>Mimino</h3>
         <ul>
-          <li>The first team project, was realized with the aim to reinforce our HTML5 CSS3 knowledge.
-            Role: Developer.
-            [HTML5, SCSS, JS, Parcel-Project-Template]</li>
+          <li><a href="braharulia.github.io/barbershop/">Barbershop</a>
+            A website with a responsive layout.
+            Role: Developer
+            Individual project.
+
+            [HTML5, SCSS, JS]</li>
         </ul>
       </div>
     </div>
