--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
           WebStudio</h3>
         <ul>
           <a href="https://braharulia.github.io/goit-markup-hw-08/">WebStudio</a>
+          <a href="https://github.com/braharulia/goit-markup-hw-08">GitHub</a>
           <li>A website of WebStudio company.
           Responsive design, transform
           effects, modal windows.
@@ -130,6 +131,7 @@
           IceCream</h3>
         <ul>
           <li><a href="https://braharulia.github.io/team-proj-icecream/">IceCream</a>
+            <a href="https://github.com/braharulia/team-proj-icecream">GitHub</a>
           A website for ice cream product
           companies. Adaptive design,
           animations, modal windows, and
@@ -143,9 +145,10 @@
       </div>
       <hr>
       <div class="project-card">
-        <h3>Mimino</h3>
+        <h3>Barbershop</h3>
         <ul>
           <li><a href="braharulia.github.io/barbershop/">Barbershop</a>
+            <a href="https://github.com/braharulia/barbershop">GitHub</a>
             A website with a responsive layout.
             Role: Developer
             Individual project.
