--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
         <h3>
           WebStudio</h3>
         <ul>
-          <a href="https://braharulia.github.io/goit-markup-hw-08/">WebStudio</a>
-          <a href="https://github.com/braharulia/goit-markup-hw-08">GitHub</a>
+          <a href="https://braharulia.github.io/goit-markup-hw-08/" target="_blank">WebStudio</a>
+          <a href="https://github.com/braharulia/goit-markup-hw-08" target="_blank">GitHub</a>
           <li>A website of WebStudio company.
           Responsive design, transform
           effects, modal windows.
@@ -130,8 +130,8 @@
         <h3>
           IceCream</h3>
         <ul>
-          <li><a href="https://braharulia.github.io/team-proj-icecream/">IceCream</a>
-            <a href="https://github.com/braharulia/team-proj-icecream">GitHub</a>
+          <li><a href="https://braharulia.github.io/team-proj-icecream/" target="_blank">IceCream</a>
+            <a href="https://github.com/braharulia/team-proj-icecream" target="_blank">GitHub</a>
           A website for ice cream product
           companies. Adaptive design,
           animations, modal windows, and
@@ -147,8 +147,8 @@
       <div class="project-card">
         <h3>Barbershop</h3>
         <ul>
-          <li><a href="braharulia.github.io/barbershop/">Barbershop</a>
-            <a href="https://github.com/braharulia/barbershop">GitHub</a>
+          <li><a href="braharulia.github.io/barbershop/" target="_blank">Barbershop</a>
+            <a href="https://github.com/braharulia/barbershop" target="_blank">GitHub</a>
             A website with a responsive layout.
             Role: Developer
             Individual project.
