--- a/index.html
+++ b/index.html
@@ -115,45 +115,43 @@
           WebStudio</h3>
         <ul>
           <a href="https://braharulia.github.io/goit-markup-hw-08/" target="_blank">WebStudio</a>
-          <a href="https://github.com/braharulia/goit-markup-hw-08" target="_blank">GitHub</a>
-          <li>A website of WebStudio company.
+          <a href="https://github.com/braharulia/goit-markup-hw-08" target="_blank">[GitHub]</a>
+          <li><p>A website of WebStudio company.
           Responsive design, transform
           effects, modal windows.
           Role: developer.
-          Individual project.
-          [HTML5, SCSS, JS]
+          Individual project.</p>
+          <p>[HTML5, SCSS, JS]</p>
 </li>
         </ul>
       </div>
       <hr>
       <div class="project-card">
-        <h3>
-          IceCream</h3>
         <ul>
           <li><a href="https://braharulia.github.io/team-proj-icecream/" target="_blank">IceCream</a>
-            <a href="https://github.com/braharulia/team-proj-icecream" target="_blank">GitHub</a>
-          A website for ice cream product
+            <a href="https://github.com/braharulia/team-proj-icecream" target="_blank">[GitHub]</a>
+          <p>A website for ice cream product
           companies. Adaptive design,
           animations, modal windows, and
           burger menu for ordering.
           Role: Developer of Buy now modal
           & Products section with modal.
-          Team project
-          [HTML5, SCSS, JS, Parcel-Project-Template]
+          Team project</p>
+          <p>[HTML5, SCSS, JS, Parcel-Project-Template]</p>
 </li>
         </ul>
       </div>
       <hr>
       <div class="project-card">
-        <h3>Barbershop</h3>
         <ul>
-          <li><a href="braharulia.github.io/barbershop/" target="_blank">Barbershop</a>
-            <a href="https://github.com/braharulia/barbershop" target="_blank">GitHub</a>
-            A website with a responsive layout.
+          <li>
+            <a href="braharulia.github.io/barbershop/" target="_blank">Barbershop</a>
+            <a href="https://github.com/braharulia/barbershop" target="_blank">[GitHub]</a>
+            <p>A website with a responsive layout.
             Role: Developer
-            Individual project.
-
-            [HTML5, SCSS, JS]</li>
+            Individual project.</p>
+            <p>[HTML5, SCSS, JS]</p>
+            </li>
         </ul>
       </div>
     </div>
