--- a/index.html
+++ b/index.html
@@ -111,11 +111,10 @@
 
     <div id="projects-container" class="projects-container">
       <div class="project-card">
-        <h3>
-          WebStudio</h3>
+      
         <ul>
-          <a href="https://braharulia.github.io/goit-markup-hw-08/" target="_blank">WebStudio</a>
-          <a href="https://github.com/braharulia/goit-markup-hw-08" target="_blank">[GitHub]</a>
+          <a class="card-link" href="https://braharulia.github.io/goit-markup-hw-08/" target="_blank">WebStudio</a>
+          <a class="card-link" href="https://github.com/braharulia/goit-markup-hw-08" target="_blank">[GitHub]</a>
           <li><p>A website of WebStudio company.
           Responsive design, transform
           effects, modal windows.
@@ -128,8 +127,8 @@
       <hr>
       <div class="project-card">
         <ul>
-          <li><a href="https://braharulia.github.io/team-proj-icecream/" target="_blank">IceCream</a>
-            <a href="https://github.com/braharulia/team-proj-icecream" target="_blank">[GitHub]</a>
+          <li><a class="card-link" href="https://braharulia.github.io/team-proj-icecream/" target="_blank">IceCream</a>
+            <a class="card-link" href="https://github.com/braharulia/team-proj-icecream" target="_blank">[GitHub]</a>
           <p>A website for ice cream product
           companies. Adaptive design,
           animations, modal windows, and
@@ -145,8 +144,8 @@
       <div class="project-card">
         <ul>
           <li>
-            <a href="braharulia.github.io/barbershop/" target="_blank">Barbershop</a>
-            <a href="https://github.com/braharulia/barbershop" target="_blank">[GitHub]</a>
+            <a class="card-link" href="braharulia.github.io/barbershop/" target="_blank">Barbershop</a>
+            <a class="card-link" href="https://github.com/braharulia/barbershop" target="_blank">[GitHub]</a>
             <p>A website with a responsive layout.
             Role: Developer
             Individual project.</p>
