--- a/index.html
+++ b/index.html
@@ -177,9 +177,8 @@
       </div>
       <div class="recommendation">
         <span>&#8220;</span>
-        I had worked along with Uliana on our project. She will be an asset for any organisation!She consistently seeks
+        I had worked along with Uliana on our project. She consistently seeks
         out constructive feedback so she can improve her skills.
-        She is truly a stand-out individual who will impress everyone she meets.
         <span>&#8221;</span>
 
       </div>
